 * added ssl renegotiation tests

v1.11.0
--------------------------------------------------------------------------------
 * connection IO event handling reworked. Instead of reacting on incoming bytes, the
   state machine now acts on incoming frames that are affecting it. This reduces
   state transitions.
 * pytest suite now covers some basic tests on h2 selection, GET and POST
 * started to add pytest suite from existing bash tests

v1.10.21
--------------------------------------------------------------------------------
 * Code cleanups from Apache subversion
 * New optional function to query the number of h2 workers from Apache branch

v1.10.20
--------------------------------------------------------------------------------
 * Restore keepalive handling of v1.10.16. Idle connections are kept open
   for the duration.

v1.10.19
--------------------------------------------------------------------------------
 * adding regular memory cleanup when transferring large response bodies. This
   reduces memory footprint and avoids memory exhaustion when transferring large files
   on 32-bit architectures.

v1.10.18
--------------------------------------------------------------------------------
 * fixes a race condition where aborting streams triggers an unnecessary timeout.

v1.10.17
--------------------------------------------------------------------------------
 * accurate reporting of h2 data input/output per request via mod_logio. Fixes
   an issue where output sizes where counted n-times on reused slave connections. See #158.
 * normalized connection prefix logging when trace2 is enabled for direct h2 connection
   detection.

v1.10.16
--------------------------------------------------------------------------------
 * Removed no longer used code in stream cleanup, disabled beam events
   during pool shutdown, discouraged content-encoding filter from applying
   themselves to http2_status responses.

v1.10.15